--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@ body,
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
+  background-color: #c62828;
 }
 
 img {
@@ -27,22 +28,20 @@ Button
 -------------------------------------------------------------------------------- */
 
 .btn {
-  display: inline-block;
-  padding: 10px 20px;
+  margin:auto;
+  padding: 4px 8pxpx;
+  width: 160px;
   border-color: #014041;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
+  background-color: #c63838;
   color: #f8f8f8;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
 }
 
-.btn_sizeMin {
-  min-height: 50px;
-  min-width: 100px;
-}
+
 
 .btn_sizeSm {
   padding: 10px 15px;
@@ -55,7 +54,7 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: #a72f2f;
   text-decoration: none;
 }
 
@@ -63,8 +62,6 @@ Button
 .btn_asLink {
   padding: 0;
   border-width: 0;
-  border-bottom: 1px solid #444;
-  border-radius: 0;
   background: none;
   font: inherit;
   color: #444;
@@ -97,16 +94,38 @@ Form Treatment
 
 .formPanel {
   box-sizing: border-box;
-  width: 400px;
+  width: 320px;
+  height: 240px;
   max-width: 100%;
   padding: 25px;
   margin: 0 auto 20px;
-  background-color: #efefef;
-  border-radius: 3px;
+  background-color: #e6e6e6;
+  border-radius: 16px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
 }
 
-input {
+.loginInputContainer {
   margin: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.loginInput {
+  background-color: #ffffff;
+}
+
+.formButtonContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+/* --------------------------------------------------------------------------------
+Logo
+-------------------------------------------------------------------------------- */
+
+.fullLogoContainer{
+  margin: auto;
+  width: 320px;
+  padding-bottom: 40px;
 }
