--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,9 @@
 html,
 body,
 #react-root {
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -125,7 +127,7 @@ Logo
 -------------------------------------------------------------------------------- */
 
 .fullLogoContainer{
-  margin: auto;
+  margin: 64px auto 0px auto;
   width: 320px;
   padding-bottom: 40px;
 }
