Added styiling to personal car views. Added a confirmation dialog box when you try to delete a car

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -168,3 +168,14 @@ Add car
   margin:  auto;
   width: 80%;
 }
+
+.addCarForm{
+  text-align: center;
+}
+
+.hover:hover{
+  transform: scale(1.1);
+}
+.hover:focus{
+  transform: scale(1.1);
+}
